test/visibility/rename/renameUsedMod/renameExceptList2.good
renameExceptList2.chpl:8: In function 'main':
renameExceptList2.chpl:10: error: 'y' undeclared (first use this function)
